--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "html2pdf.js": "^0.10.3",
+    "marked": "^15.0.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
