--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dompurify": "^3.2.6",
     "html2pdf.js": "^0.10.3",
     "marked": "^15.0.12",
     "react": "^18.2.0",
