--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src --ext .js,.jsx",
+    "test": "vitest run"
   },
   "dependencies": {
     "dompurify": "^3.2.6",
@@ -14,10 +16,16 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@vitejs/plugin-react": "^4.5.2",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.5",
+    "jsdom": "^26.1.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.2",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vitest": "^3.2.4"
   }
 }
