--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "html2pdf.js": "^0.10.3",
     "marked": "^15.0.12",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
